@@ -16,17 +16,20 @@ public class ParserTest {
     public void testParser() {
         //GIVEN
         // let name: string = "Olive";
-        // print(name)
+        // println(name);
         List<Token> tokens = List.of(
-                new ValueToken(TokenType.LET_KEYWORD, "let", 1, 1),
-                new ValueToken(TokenType.IDENTIFIER, "name", 5, 1),
-                new ValueToken(TokenType.STRING_TYPE, "string", 11, 1),
-                new ValueToken(TokenType.ASSIGN, "=", 18, 1),
-                new ValueToken(TokenType.STRING, "\"Olive\"", 20, 1),
-                new ValueToken(TokenType.SEMICOLON, ";", 27, 1),
-                new ValueToken(TokenType.PRINT_KEYWORD, "print", 2, 1),
-                new ValueToken(TokenType.IDENTIFIER, "name", 2, 7),
-                new ValueToken(TokenType.SEMICOLON, ";", 2, 11)
+                new ValueToken(TokenType.LET_KEYWORD, "let", 0, 0),
+                new ValueToken(TokenType.IDENTIFIER, "name", 4, 0),
+                new ValueToken(TokenType.COLON, ":", 8, 0),
+                new ValueToken(TokenType.STRING_TYPE, "string", 10, 0),
+                new ValueToken(TokenType.ASSIGN, "=", 17, 0),
+                new ValueToken(TokenType.STRING, "\"Olive\"", 19, 0),
+                new ValueToken(TokenType.SEMICOLON, ";", 26, 0),
+                new ValueToken(TokenType.PRINT_KEYWORD, "println", 0, 1),
+                new ValueToken(TokenType.PARENTHESIS_OPEN, "(", 7, 1),
+                new ValueToken(TokenType.IDENTIFIER, "name", 8, 1),
+                new ValueToken(TokenType.PARENTHESIS_CLOSE, ")", 12, 1),
+                new ValueToken(TokenType.SEMICOLON, ";", 13, 1)
         );
 
         // WHEN
@@ -35,7 +38,7 @@ public class ParserTest {
 
         // THEN
         assertEquals(2, astNodes.size());
-        AssignationNode assignationNode1 = (AssignationNode) astNodes.get(0);
+        AssignationNode assignationNode1 = (AssignationNode) astNodes.getFirst();
 
         DeclarationNode declarationNode = assignationNode1.getDeclaration();
         assertInstanceOf(DeclarationNode.class, declarationNode);
@@ -50,6 +53,6 @@ public class ParserTest {
         ASTNode printNode = astNodes.get(1);
         assertInstanceOf(PrintNode.class, printNode);
         PrintNode print = (PrintNode) printNode;
-        assertEquals("\"Olive\"", ((LiteralNode) print.getExpression()).getValue());
+        assertEquals("name", ((VariableNode) print.getExpression()).getValue());
     }
 }
